--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,11 @@ kotlin.daemon.jvmargs=-Xmx4G
 #Android
 android.useAndroidX=true
 android.nonTransitiveRClass=true
+
+signing.keyId=3CFFDF33
+signing.password=12345678
+signing.secretKeyRingFile=../lib_key_store.gpg
+ossrhUsername=cIn4JtRL
+ossrhPassword=Xo+REh6cWQj1ZkY615s7Jk30aFnlcoXtNQHLpaITErXC
+mavenCentralUsername=cIn4JtRL
+mavenCentralPassword=Xo+REh6cWQj1ZkY615s7Jk30aFnlcoXtNQHLpaITErXC
